// protoc --gogofaster_out=. auth_service.proto
syntax = "proto3";

package proto;

message AuthReq {
  string uid = 1;
  int32 method = 2;
  string token = 3;
}

message AuthResp {
  int32 status = 1;
  int32 err_code = 2;
  string err_msg = 3;
}